<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/name_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Gheorghe Stefanescu"
        android:textSize="@dimen/profile_name_size"
        android:textColor="@color/black"/>

    <ImageView
        android:layout_width="@dimen/profile_image_size"
        android:layout_height="@dimen/profile_image_size"
        android:src="@drawable/profile_picture"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/profile_tag_size"
        android:text="@string/profile_fragment_rank_text"/>

    <TextView
        android:id="@+id/rank_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/profile_rank_text_size"
        android:textColor="@color/black"
        android:text="Chief"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/profile_tag_size"
        android:text="@string/profile_fragment_rating_text"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ratingImageView"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:background="@drawable/rating_bar"/>

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seekBar"
            android:progressDrawable="@drawable/nothing"
            android:thumb="@drawable/seekbar_thumb"
            android:progress="56" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:id="@+id/emailTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/profile_tag_size"

            android:text="@string/profile_fragment_email_text"/>

        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/profile_info_size"
            android:textColor="@color/black"
            android:layout_toRightOf="@+id/emailTag"
            android:text="gheorghe.stefanescu@gmail.com"/>

        <TextView
            android:id="@+id/phoneTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emailTag"
            android:textSize="@dimen/profile_tag_size"
            android:text="@string/profile_fragment_phone_text"/>

        <TextView
            android:id="@+id/phoneTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/profile_info_size"
            android:layout_below="@+id/emailTag"
            android:textColor="@color/black"
            android:layout_toRightOf="@+id/phoneTag"
            android:text="+40123456789"/>

    </RelativeLayout>



    <Button
        android:id="@+id/followButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/profile_follow_button_margin"
        android:background="@drawable/follow_button_shape"
        android:textSize="@dimen/profile_follow_button_text_size"
        android:text="@string/profile_fragment_follow_button_text"/>




</LinearLayout>