<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/white">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/layout_my_task_details_bottom_container"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/layout_my_task_details_image_imageView"
                android:layout_width="@dimen/task_details_image_size"
                android:layout_height="@dimen/task_details_image_size"
                android:layout_margin="@dimen/task_details_image_padding"
                android:src="@drawable/task_image"
                />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/layout_my_task_details_title_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/task_details_title_string"
                    android:textColor="@color/black"
                    android:layout_margin="10dp"
                    android:textSize="@dimen/task_details_title_size"
                    android:layout_alignParentTop="true"/>

                <TextView
                    android:id="@+id/my_task_details_tvDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:text="Date "
                    android:textSize="@dimen/task_details_tags_text_size"
                    android:layout_below="@id/layout_my_task_details_title_textView"/>

                <TextView
                    android:id="@+id/my_task_details_tvTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="10dp"
                    android:text="Time"
                    android:textSize="@dimen/task_details_tags_text_size"
                    android:layout_below="@id/layout_my_task_details_title_textView"
                    android:layout_toRightOf="@id/my_task_details_tvDate"/>

                <TextView
                    android:id="@+id/layout_my_task_details_estimated_time_tag_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/task_details_estimated_time_tag_text"
                    android:textSize="@dimen/task_details_tags_text_size"
                    android:layout_below="@id/my_task_details_tvDate"/>

                <TextView
                    android:id="@+id/layout_my_task_details_estimated_time_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/task_details_estimated_time_value_text"
                    android:textSize="@dimen/task_details_tags_text_size"
                    android:layout_below="@id/my_task_details_tvDate"
                    android:layout_toRightOf="@id/layout_my_task_details_estimated_time_tag_textView"/>


            </RelativeLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_details_description_text"
            android:layout_gravity="start"
            android:textSize="@dimen/task_details_description_tag_text_size"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/layout_my_task_details_details_textVIew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:text="@string/lorem_ipsum"
            android:textSize="15sp"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layout_my_task_details_bottom_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <RelativeLayout
            android:id="@+id/layout_my_task_details_info_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">


            <TextView
                android:id="@+id/layout_my_task_details_neighbour_tag_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_details_neighbour_tag_text"
                android:textSize="@dimen/task_details_tags_text_size"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"/>

            <TextView
                android:id="@+id/layout_my_task_details_username_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_details_username_text"
                android:textSize="@dimen/task_details_tags_text_size"
                android:textColor="@color/black"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/layout_my_task_details_neighbour_tag_textView"/>

            <TextView
                android:id="@+id/layout_my_task_details_rating_tag_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_details_rating_tag_text"
                android:textSize="@dimen/task_details_tags_text_size"
                android:layout_alignParentLeft="true"
                android:paddingBottom="8dp"
                android:layout_alignBottom="@+id/layout_my_task_details_star_imageView"/>

            <TextView
                android:id="@+id/layout_my_task_details_rating_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:text="@string/task_details_rating_value_text"
                android:paddingLeft="15dp"
                android:layout_alignBottom="@+id/layout_my_task_details_star_imageView"
                android:layout_toRightOf="@+id/layout_my_task_details_rating_tag_textView"/>

            <TextView
                android:id="@+id/layout_my_task_details_reward_tag_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_details_reward_tag_text"
                android:textSize="@dimen/task_details_tags_text_size"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"/>

            <ImageView
                android:id="@+id/layout_my_task_details_star_imageView"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/star"
                android:layout_alignParentRight="true"
                android:layout_below="@id/layout_my_task_details_reward_tag_textView"/>

            <TextView
                android:id="@+id/layout_my_task_details_reward_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_details_reward_value_text"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:layout_alignBottom="@id/layout_my_task_details_star_imageView"
                android:layout_toLeftOf="@+id/layout_my_task_details_star_imageView"/>

        </RelativeLayout>

        <Button android:id="@+id/layout_my_task_details_pending_button"
            android:text="Pending: "
            android:textAllCaps="false"
            android:layout_marginLeft="@dimen/layout_my_task_button_horizontal_margin"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_below="@+id/layout_my_task_details_info_container"
            android:layout_alignParentLeft="true"
            android:drawableRight="@drawable/ic_nature_people_24dp"/>



        <Button android:id="@+id/layout_my_task_details_confirmed_button"
            android:text="Confirmed: "
            android:textAllCaps="false"
            android:layout_marginLeft="@dimen/layout_my_task_button_horizontal_margin"
            android:layout_marginRight="@dimen/layout_my_task_button_horizontal_margin"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_my_task_details_info_container"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/layout_my_task_details_pending_button"
            android:drawableRight="@drawable/ic_person_black_18dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_below="@+id/layout_my_task_details_confirmed_button">

            <Button
                android:id="@+id/layout_my_task_details_start_button"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:text="Start"
                android:visibility="gone"
                android:layout_margin="10dp"
                android:background="@drawable/circle_green_shape"
                android:textColor="@color/white"
                android:layout_alignBottom="@+id/layout_my_task_details_pending_button"
                android:layout_toRightOf="@+id/layout_my_task_details_pending_button"
                android:layout_toLeftOf="@+id/layout_my_task_details_confirmed_button"
                />

            <Button
                android:id="@+id/layout_my_task_details_finish_button"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:text="Finish"
                android:layout_margin="10dp"
                android:visibility="gone"
                android:background="@drawable/circle_green_shape"
                android:textColor="@color/white"
                android:layout_alignBottom="@+id/layout_my_task_details_pending_button"
                android:layout_toRightOf="@+id/layout_my_task_details_pending_button"
                android:layout_toLeftOf="@+id/layout_my_task_details_confirmed_button"
                />

            <Button
                android:id="@+id/layout_my_task_details_delete_button"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:text="Delete"
                android:layout_margin="10dp"
                android:visibility="gone"
                android:background="@drawable/circle_red_shape"
                android:textColor="@color/white"
                android:layout_below="@+id/layout_my_task_details_pending_button"
                android:layout_toRightOf="@+id/layout_my_task_details_pending_button"
                android:layout_toLeftOf="@+id/layout_my_task_details_confirmed_button"
                />

        </LinearLayout>

    </RelativeLayout>


</RelativeLayout>

